Fix test: mock returned an empty stubbed list of categories; assert categories are sorted by name